# inspect-audit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: assurance-boundary.md  example-report.md  technical-writeup.md
examples/: broken.eval  build_examples.py  clean.eval
fixtures/: build_fixtures.py
src/inspect_audit/: __init__.py  audit.py  catalog.py  cli.py  loader.py  model.py  report.py
src/inspect_audit/checks/: __init__.py  _util.py  crossrun.py  denominator.py  judge.py  regime.py  run_integrity.py  scorer.py
tests/: conftest.py  test_api.py  test_cli.py  test_contract.py  test_crossrun.py  test_docs.py  test_errors.py  test_falsepositives.py  test_mutation.py  test_registry.py
