[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inspect-audit"
version = "0.1.0"
description = "Static, read-only validity auditor for Inspect (.eval) evaluation logs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "inspect-audit contributors" }]
keywords = ["inspect", "evaluation", "llm", "audit", "validity"]
dependencies = [
  "inspect_ai>=0.3.240",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
inspect-audit = "inspect_audit.cli:main"

[project.urls]
Homepage = "https://github.com/repowazdogz-droid/inspect-audit"
Issues = "https://github.com/repowazdogz-droid/inspect-audit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/inspect_audit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
