[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inspect-audit"
version = "0.1.0"
description = "Static, read-only validity auditor for Inspect (.eval) evaluation logs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "repowazdogz-droid" }]
keywords = ["inspect", "evaluation", "llm", "audit", "validity"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "inspect_ai>=0.3.240",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6", "mypy>=1.8"]

[project.scripts]
inspect-audit = "inspect_audit.cli:main"

[project.urls]
Homepage = "https://github.com/repowazdogz-droid/inspect-audit"
Issues = "https://github.com/repowazdogz-droid/inspect-audit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/inspect_audit"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
# E501 (line length) is not enforced: many findings embed wrapped explanatory
# prose whose reflow would hurt readability more than it helps.
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["inspect_ai.*"]
ignore_missing_imports = true
